part-1/exercise-1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
